Movie card styled with respective layout
A two column layout container for movies cards responsivei within 425px width

--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,23 @@
         ></i>
       </div>
       <section>
-        <h1 class="my-4 text-base font-black">Recent Movies</h1>
-        <article>
+        <h1 class="my-4 text-base font-black">Trending Movies</h1>
+        <article class="grid grid-cols-2 gap-4">
           <figure>
-            <img src="" alt="" />
-            <figcaption>Movie Title</figcaption>
+            <img
+              class="rounded-lg"
+              src="https://cuevana.pro/resize/200/storage/65975/PRHY4Jj1GRDrY4DAmhtIv9FDUJ2sRwiWBaG6VFFY.jpg"
+              alt=""
+            />
+            <figcaption class="w-full text-center">Movie Title</figcaption>
+          </figure>
+          <figure>
+            <img
+              class="rounded-lg"
+              src="https://cuevana.pro/resize/200/storage/65975/PRHY4Jj1GRDrY4DAmhtIv9FDUJ2sRwiWBaG6VFFY.jpg"
+              alt=""
+            />
+            <figcaption class="w-full text-center">Movie Title</figcaption>
           </figure>
         </article>
       </section>
