Migration to axios

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
       src="https://kit.fontawesome.com/e8d0a79e93.js"
       crossorigin="anonymous"
     ></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "axios": "../node_modules/axios/dist/esm/axios.min.js"
+        }
+      }
+    </script>
     <script defer type="module" src="../src/main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
