--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       }
     </script>
     <script defer type="module" src="../src/main.js"></script>
+    <!-- <script defer type="module" src="../src/navigation.js"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -55,7 +56,7 @@
           <input
             class="bg-[transparent] px-3 text-white placeholder:italic placeholder:text-slate-400 focus:outline-none"
             type="text"
-            placeholder="Search Movies"
+            placeholder="Search"
           />
           <i
             class="fa-solid fa-magnifying-glass mx-3 text-white hover:cursor-pointer"
