--- a/public/index.html
+++ b/public/index.html
@@ -70,31 +70,33 @@
         <article id="trendMovies" class="grid grid-cols-2 gap-4">
           <!-- TODO -->
           <figure class="relative z-auto">
-            <p
-              class="absolute mt-2 line-clamp-10 max-h-40 text-ellipsis px-2 text-start text-xs"
-            >
-              Las vacaciones de una familia dan un giro escalofriante cuando dos
-              desconocidos se presentan en plena noche buscando refugio frente a
-              un ciberataque que se va volviendo más y más aterrador. En esta
-              situación, todos deberán asumir su papel en un mundo que se
-              desmorona.
-            </p>
-            <div
-              class="absolute top-44 flex w-full flex-wrap justify-start gap-2 px-2"
-            >
-              <p class="genre text-xxs">Science fiction</p>
-              <p class="genre text-xxs">Mistery</p>
-              <p class="genre text-xxs">Thriller</p>
-            </div>
-            <div
-              class="absolute bottom-12 z-10 flex w-full items-center justify-between gap-1 px-2"
-            >
-              <a href="#" class="cursor-pointer hover:text-azure">
-                <p class="text-[11px]">View More...</p>
-              </a>
-              <div id="movieRatingStart" class="flex items-center gap-1">
-                <p class="rating text-sm">4.5</p>
-                <i class="fa-solid fa-star fa-sm pb-1 text-amber-500"></i>
+            <div class="absolute z-10">
+              <p
+                class="mt-2 line-clamp-10 max-h-40 text-ellipsis px-2 text-start text-xs"
+              >
+                Las vacaciones de una familia dan un giro escalofriante cuando
+                dos desconocidos se presentan en plena noche buscando refugio
+                frente a un ciberataque que se va volviendo más y más aterrador.
+                En esta situación, todos deberán asumir su papel en un mundo que
+                se desmorona.
+              </p>
+              <div
+                class="absolute top-44 flex w-full flex-wrap justify-start gap-2 px-2"
+              >
+                <p class="genre text-xxs">Science fiction</p>
+                <p class="genre text-xxs">Mistery</p>
+                <p class="genre text-xxs">Thriller</p>
+              </div>
+              <div
+                class="absolute top-[230px] flex w-full items-center justify-between gap-1 px-2"
+              >
+                <a href="#" class="cursor-pointer hover:text-azure">
+                  <p class="text-[11px]">View More...</p>
+                </a>
+                <div id="movieRatingStart" class="flex items-center gap-1">
+                  <p class="rating text-sm">4.5</p>
+                  <i class="fa-solid fa-star fa-sm pb-1 text-amber-500"></i>
+                </div>
               </div>
             </div>
             <img
