--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,24 @@
         <ul
           class="absolute mx-[-1.25rem] mb-4 grid w-screen max-w-4xl -translate-y-full grid-cols-1 gap-3 bg-secondary-color-b px-5 py-3 transition-all"
         >
-          <li><a class="fancy-link" href="./">Home</a></li>
-          <li><a class="fancy-link" href="#series">Series</a></li>
-          <li><a class="fancy-link" href="#movies">Movies</a></li>
-          <li><a class="fancy-link" href="#newRelease">New Release</a></li>
+          <li>
+            <a class="fancy-link" href="#home" onclick="closeHamMenu()">Home</a>
+          </li>
+          <li>
+            <a class="fancy-link" href="#series" onclick="closeHamMenu()"
+              >Series</a
+            >
+          </li>
+          <li>
+            <a class="fancy-link" href="#movies" onclick="closeHamMenu()"
+              >Movies</a
+            >
+          </li>
+          <li>
+            <a class="fancy-link" href="#newRelease" onclick="closeHamMenu()"
+              >New Release</a
+            >
+          </li>
         </ul>
         <div
           class="relative top-3 flex h-[31px] w-full items-center justify-between rounded-lg bg-softBlue transition-all"
