--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700;900&family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/app.css" />
   </head>
+
   <body class="overflow-x-clip bg-primary-color-b">
     <header
       class="flex h-[85px] items-center justify-center overflow-y-clip bg-secondary-color-b py-2"
     >
       <div class="flex w-full max-w-4xl items-center justify-between pl-2 pr-5">
-        <a href="#"
+        <a href="#home"
           ><img width="110" src="./assets/ALMOVIE-logo.png" alt="ALMOVIE logo"
         /></a>
         <nav>
@@ -47,20 +48,16 @@
           class="absolute mx-[-1.25rem] mb-4 grid w-screen max-w-4xl -translate-y-full grid-cols-1 gap-3 bg-secondary-color-b px-5 py-3 transition-all"
         >
           <li>
-            <a class="fancy-link" href="#home" onclick="closeHamMenu()">Home</a>
+            <a id="navHome" class="fancy-link" href="#home">Home</a>
           </li>
           <li>
-            <a class="fancy-link" href="#series" onclick="closeHamMenu()"
-              >Series</a
-            >
+            <a id="navSeries" class="fancy-link" href="#series">Series</a>
           </li>
           <li>
-            <a class="fancy-link" href="#movies" onclick="closeHamMenu()"
-              >Movies</a
-            >
+            <a id="navMovies" class="fancy-link" href="#movies">Movies</a>
           </li>
           <li>
-            <a class="fancy-link" href="#newRelease" onclick="closeHamMenu()"
+            <a id="navNewRelease" class="fancy-link" href="#newRelease"
               >New Release</a
             >
           </li>
@@ -80,15 +77,19 @@
           ></i>
         </div>
       </div>
-      <section class="content mt-10 transition-opacity">
+      <section
+        id="previewCards-container"
+        class="content mt-10 transition-opacity"
+      >
         <h1 class="my-4 text-base font-black">Trending Movies</h1>
         <article
           id="trendMovies"
           class="grid grid-cols-2 justify-items-center gap-4"
         >
-          <!-- <figure class="relative z-auto w-full max-w-xs cursor-pointer">
+          <!--  -->
+          <figure class="relative z-auto w-full max-w-xs cursor-pointer">
             <div
-              class="absolute z-10 h-full cursor-pointer opacity-0 transition-all focus:opacity-100"
+              class="absolute z-10 h-full cursor-pointer transition-all focus:opacity-100"
             >
               <p
                 class="mt-2 line-clamp-10 max-h-40 text-ellipsis px-2 text-start text-xs"
@@ -109,10 +110,13 @@
               <div
                 class="absolute top-[230px] flex w-full items-center justify-between gap-1 px-2"
               >
-                <a href="#" class="cursor-pointer hover:text-azure">
+                <a href="#movie=" class="cursor-pointer hover:text-azure">
                   <p class="text-[11px]">View More...</p>
                 </a>
-                <div id="movieRatingStart" class="flex items-center gap-1">
+                <div
+                  id="movieRatingStart-prevCards"
+                  class="flex items-center gap-1"
+                >
                   <p class="rating text-sm">4.5</p>
                   <i class="fa-solid fa-star fa-sm pb-1 text-amber-500"></i>
                 </div>
@@ -126,9 +130,10 @@
             <figcaption class="relative w-full text-center">
               Movie Title
             </figcaption>
-          </figure> -->
+          </figure>
         </article>
       </section>
+
       <aside class="hidden">
         <h2>Genres</h2>
         <ul>
@@ -142,5 +147,57 @@
         </ul>
       </aside>
     </main>
+    <section id="moreDetails" class="m-[0_auto] hidden max-w-4xl pb-14">
+      <div class="my-4 px-5">
+        <a href="#home">
+          <i class="fa-solid fa-arrow-left fa-xl text-white"></i>
+        </a>
+      </div>
+      <!-- TODO -->
+      <figure>
+        <img
+          class="h-[240px] w-full"
+          src="https://cuevana.pro/resize/200/storage/65975/PRHY4Jj1GRDrY4DAmhtIv9FDUJ2sRwiWBaG6VFFY.jpg"
+          alt=""
+        />
+        <figcaption
+          class="my-4 flex justify-center font-sans text-[22px] font-black"
+        >
+          Dejar el mundo atrás
+        </figcaption>
+      </figure>
+      <div class="bg-secondary-color-b pb-2 text-sm">
+        <div class="relative m-[0_auto] flex w-40 justify-center gap-2">
+          <p>11/22/2023</p>
+          <span>|</span>
+          <p>2h 21m</p>
+          <div
+            id="movieRatingStart-infoSec"
+            class="absolute -right-24 top-2 flex items-center gap-2"
+          >
+            <p class="rating text-xl">4.5</p>
+            <i class="fa-solid fa-star fa-lg text-amber-500"></i>
+          </div>
+        </div>
+        <div class="flex justify-center gap-2">
+          <p>genre</p>
+          <p>genre</p>
+          <p>genre</p>
+          <p>genre</p>
+        </div>
+      </div>
+      <div class="px-5">
+        <h2 class="mt-6 font-sans text-xl font-bold">Overview</h2>
+        <p class="mt-1 text-base">
+          Las vacaciones de una familia dan un giro escalofriante cuando dos
+          desconocidos se presentan en plena noche buscando refugio frente a un
+          ciberataque que se va volviendo más y más aterrador. En esta
+          situación, todos deberán asumir su papel en un mundo que se desmorona.
+        </p>
+        <h3 class="mt-9 font-bold">Sam Esmail</h3>
+        <p class="text-sm">Director</p>
+      </div>
+    </section>
+    <footer></footer>
   </body>
 </html>
