function added, view more button show respective view
Only working with movies pages, not series pages
New api request added - getDirector and getMovieDetails

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
       }
     </script>
     <script defer type="module" src="../src/main.js"></script>
-    <!-- <script defer type="module" src="../src/navigation.js"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -86,8 +85,7 @@
           id="trendMovies"
           class="grid grid-cols-2 justify-items-center gap-4"
         >
-          <!--  -->
-          <figure class="relative z-auto w-full max-w-xs cursor-pointer">
+          <!-- <figure class="relative z-auto w-full max-w-xs cursor-pointer">
             <div
               class="absolute z-10 h-full cursor-pointer transition-all focus:opacity-100"
             >
@@ -130,7 +128,7 @@
             <figcaption class="relative w-full text-center">
               Movie Title
             </figcaption>
-          </figure>
+          </figure> -->
         </article>
       </section>
 
@@ -148,12 +146,11 @@
       </aside>
     </main>
     <section id="moreDetails" class="m-[0_auto] hidden max-w-4xl pb-14">
-      <div class="my-4 px-5">
+      <!-- <div class="my-4 px-5">
         <a href="#home">
           <i class="fa-solid fa-arrow-left fa-xl text-white"></i>
         </a>
       </div>
-      <!-- TODO -->
       <figure>
         <img
           class="h-[240px] w-full"
@@ -196,7 +193,7 @@
         </p>
         <h3 class="mt-9 font-bold">Sam Esmail</h3>
         <p class="text-sm">Director</p>
-      </div>
+      </div> -->
     </section>
     <footer></footer>
   </body>
