Footer added - source and credits

--- a/public/index.html
+++ b/public/index.html
@@ -195,6 +195,26 @@
         <p class="text-sm">Director</p>
       </div> -->
     </section>
-    <footer></footer>
+    <footer
+      class="flex h-16 items-center justify-center bg-secondary-color-b py-4 text-xs"
+    >
+      <div class="flex gap-4">
+        <p>
+          Website developed by
+          <span
+            ><a
+              href="https://github.com/Alexisliao10/ALMovie"
+              target="_blank"
+              class="fancy-link"
+              >Alexis Liao</a
+            ></span
+          >
+        </p>
+        <p>API from</p>
+        <a href="https://www.themoviedb.org/" target="_blank">
+          <img width="50px" src="./assets/LICENSE.svg" alt="TheMovieDB Logo" />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
