--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
           </li>
           <li>
             <a id="navNewRelease" class="fancy-link" href="#newRelease"
-              >New Release</a
+              >Upcoming</a
             >
           </li>
         </ul>
