--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,12 @@
             </figcaption>
           </figure> -->
         </article>
+        <button
+          id="showMoreBtn"
+          class="mx-auto my-10 hidden w-32 rounded-[25rem] border-2 border-white border-opacity-0 bg-azure py-2 transition-opacity hover:bg-blue-700 active:border-opacity-100"
+        >
+          Show more
+        </button>
       </section>
 
       <aside class="hidden">
@@ -196,7 +202,7 @@
       </div> -->
     </section>
     <footer
-      class="flex h-16 items-center justify-center bg-secondary-color-b py-4 text-xs"
+      class="mt-14 flex h-16 items-center justify-center bg-secondary-color-b py-4 text-xs"
     >
       <div class="flex gap-4">
         <p>
