Add icon to the webpage tab

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/app.css" />
+    <link rel="icon" href="./assets/ALMOVIE-logo.png" />
   </head>
 
   <body class="overflow-x-clip bg-primary-color-b">
