Enhancement: Added 'Show More' button and Infinite Scroll feature
Implemented new features exclusively for the search page.
Known issues:

*Attempting to navigate back to a previous search page may encounter functionality issues.
*Attempting to load more movie cards would disrupt the initial card view, preventing detailed information from displaying correctly.

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
       </div>
       <section
         id="previewCards-container"
-        class="content mt-10 transition-opacity"
+        class="mt-10 flex flex-col justify-center transition-opacity"
       >
         <h1 class="my-4 text-base font-black">Trending Movies</h1>
         <article
@@ -131,12 +131,12 @@
             </figcaption>
           </figure> -->
         </article>
-        <button
+        <!-- <button
           id="showMoreBtn"
-          class="mx-auto my-10 hidden w-32 rounded-[25rem] border-2 border-white border-opacity-0 bg-azure py-2 transition-opacity hover:bg-blue-700 active:border-opacity-100"
+          class="mx-auto my-10 w-32 rounded-[25rem] border-2 border-white border-opacity-0 bg-azure py-2 transition-opacity hover:bg-blue-700 active:border-opacity-100"
         >
           Show more
-        </button>
+        </button> -->
       </section>
 
       <aside class="hidden">
