Fix - show more button now working on Home page

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,11 @@
     >
       <div class="flex w-full max-w-4xl items-center justify-between pl-2 pr-5">
         <a href="#home"
-          ><img width="110" src="./assets/ALMOVIE-logo.png" alt="ALMOVIE logo"
+          ><img
+            width="110"
+            src="./assets/ALMOVIE-logo.png"
+            alt="ALMOVIE logo"
+            draggable="false"
         /></a>
         <nav>
           <div class="hamMenu">
