Refactor - changes showMoreButton's styles
border opacity to inmitate animation of glow, replaced by "ring" property from tailwindCss

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       class="flex h-[85px] items-center justify-center overflow-y-clip bg-secondary-color-b py-2"
     >
       <div class="flex w-full max-w-4xl items-center justify-between pl-2 pr-5">
-        <a href="#"
+        <a href="#home"
           ><img
             width="110"
             src="./assets/ALMOVIE-logo.png"
