feat: added navbar responsive for desktop
Remove ham menu when screen is bigger than 1024px and layout shifted the nav options.

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,12 @@
 
   <body class="overflow-x-clip bg-primary-color-b">
     <header
-      class="flex h-[85px] items-center justify-center overflow-y-clip bg-secondary-color-b py-2"
+      class="flex h-[85px] items-center justify-center overflow-y-clip bg-secondary-color-b py-2 lg:relative"
     >
-      <div class="flex w-full max-w-4xl items-center justify-between pl-2 pr-5">
-        <a href="#home"
+      <div
+        class="flex w-full max-w-4xl items-center justify-between pl-2 pr-5 lg:max-w-7xl"
+      >
+        <a href="#home" class="lg:z-10"
           ><img
             width="110"
             src="./assets/ALMOVIE-logo.png"
@@ -40,17 +42,19 @@
             draggable="false"
         /></a>
         <nav>
-          <div class="hamMenu">
+          <div class="hamMenu lg:hidden">
             <i class="fa-solid fa-bars fa-lg text-white"></i>
             <i class="fa-solid fa-xmark fa-lg hidden"></i>
           </div>
         </nav>
       </div>
     </header>
-    <main class="m-[0_auto] max-w-4xl px-5">
-      <div class="relative h-12 overflow-y-clip transition-all">
+    <main class="m-[0_auto] max-w-4xl px-5 lg:max-w-7xl">
+      <div
+        class="relative h-12 overflow-y-clip transition-all lg:absolute lg:top-6 lg:flex lg:w-full lg:overflow-visible"
+      >
         <ul
-          class="absolute mx-[-1.25rem] mb-4 grid w-screen max-w-4xl -translate-y-full grid-cols-1 gap-3 bg-secondary-color-b px-5 py-3 transition-all"
+          class="absolute mx-[-1.25rem] mb-4 grid w-screen max-w-4xl -translate-y-full grid-cols-1 gap-3 bg-secondary-color-b px-5 py-3 transition-all lg:relative lg:m-0 lg:flex lg:w-fit lg:translate-y-0 lg:gap-7 lg:bg-transparent lg:pl-40"
         >
           <li>
             <a id="navHome" class="fancy-link" href="#home">Home</a>
@@ -68,17 +72,18 @@
           </li>
         </ul>
         <div
-          class="relative top-3 flex h-[31px] w-full items-center justify-between rounded-lg bg-softBlue transition-all"
+          class="relative top-3 flex h-[31px] w-full items-center justify-between rounded-lg bg-softBlue transition-all lg:top-[10px] lg:w-fit lg:flex-row-reverse lg:bg-secondary-color-b lg:hover:cursor-pointer"
         >
           <input
             id="searchBar"
-            class="w-full bg-[transparent] px-3 text-white placeholder:italic placeholder:text-slate-400 focus:outline-none"
+            class="w-full bg-[transparent] px-3 text-white placeholder:italic placeholder:text-slate-400 focus:outline-1 lg:hidden"
             type="text"
             placeholder="Search"
           />
+          <label class="hidden lg:block lg:hover:cursor-pointer">Search</label>
           <i
             title="search"
-            class="fa-solid fa-magnifying-glass mx-3 text-white hover:cursor-pointer"
+            class="fa-solid fa-magnifying-glass mx-3 text-white hover:cursor-pointer lg:text-lg lg:text-azure"
           ></i>
         </div>
       </div>
