--- a/public/index.html
+++ b/public/index.html
@@ -88,9 +88,9 @@
         </div>
       </div>
       <div id="hero-lg" class="hero relative hidden lg:inline">
-        <div class="absolute top-64 z-10 px-12">
-          <h1 class="font- text-4xl font-black">Wonka</h1>
-          <p class="mt-3 line-clamp-5 w-[450px]">
+        <div class="absolute bottom-6 z-10 px-12">
+          <h1 class="font-sans text-4xl font-black">Wonka</h1>
+          <p class="mt-3 line-clamp-5 w-[450px] font-serif">
             Willy Wonka – chock-full of ideas and determined to change the world
             one delectable bite at a time – is proof that the best things in
             life begin with a dream, and if you’re lucky enough to meet Willy
