--- a/public/index.html
+++ b/public/index.html
@@ -49,12 +49,14 @@
         </nav>
       </div>
     </header>
-    <main class="grid-desktop m-[0_auto] max-w-4xl px-5 lg:mt-9 lg:max-w-7xl">
+    <main
+      class="grid-desktop m-[0_auto] max-w-4xl px-5 lg:mt-9 lg:max-w-7xl lg:pl-0"
+    >
       <div
         class="relative h-12 overflow-y-clip transition-all lg:absolute lg:top-6 lg:flex lg:w-full lg:overflow-visible"
       >
         <ul
-          class="absolute mx-[-1.25rem] mb-4 grid w-screen max-w-4xl -translate-y-full grid-cols-1 gap-3 bg-secondary-color-b px-5 py-3 transition-all lg:relative lg:m-0 lg:flex lg:w-fit lg:translate-y-0 lg:gap-7 lg:bg-transparent lg:pl-40"
+          class="absolute mx-[-1.25rem] mb-4 grid w-screen max-w-4xl -translate-y-full grid-cols-1 gap-3 bg-secondary-color-b px-7 py-3 transition-all lg:relative lg:m-0 lg:flex lg:w-fit lg:translate-y-0 lg:gap-7 lg:bg-transparent lg:pl-40"
         >
           <li>
             <a id="navHome" class="fancy-link" href="#home">Home</a>
@@ -88,20 +90,22 @@
         </div>
       </div>
       <div id="hero-lg" class="hero relative hidden lg:inline">
-        <div class="absolute bottom-6 z-10 px-12 hover:cursor-pointer">
-          <h1 class="font-sans text-4xl font-black">Wonka</h1>
+        <!-- <div class="absolute bottom-6 z-10 px-12 hover:cursor-pointer">
+          <h1 class="font-sans text-4xl font-black hover:text-azure/[0.9]">
+            Wonka
+          </h1>
           <p class="mt-3 line-clamp-5 w-[450px] font-serif">
             Willy Wonka – chock-full of ideas and determined to change the world
             one delectable bite at a time – is proof that the best things in
             life begin with a dream, and if you’re lucky enough to meet Willy
             Wonka, anything is possible.
           </p>
-        </div>
+        </div> -->
         <i
-          class="fa-solid fa-angle-left absolute left-4 z-10 flex h-full items-center text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
+          class="fa-solid fa-angle-left absolute left-0 z-10 flex h-full items-center pl-4 text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
         ></i>
         <i
-          class="fa-solid fa-angle-right absolute right-4 z-10 flex h-full items-center text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
+          class="fa-solid fa-angle-right absolute right-0 z-10 flex h-full items-center pr-4 text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
         ></i>
         <figure class="relative overflow-auto">
           <div class="shadow-bottom"></div>
@@ -201,7 +205,10 @@
         </ul>
       </aside>
     </main>
-    <section id="moreDetails" class="m-[0_auto] hidden max-w-4xl pb-14">
+    <section
+      id="moreDetails"
+      class="m-[0_auto] hidden max-w-4xl pb-14 lg:max-w-3xl"
+    >
       <!-- <div class="my-4 px-5">
         <a href="#home">
           <i class="fa-solid fa-arrow-left fa-xl text-white"></i>
