feat: added animation to hero title

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
           class="fa-solid fa-angle-left absolute left-0 z-10 flex h-full items-center pl-4 text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
         ></i>
         <i
-          class="fa-solid fa-angle-right absolute right-0 z-10 flex h-full items-center pr-4 text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
+          class="fa-solid bg fa-angle-right absolute right-0 z-10 flex h-full items-center pr-4 text-4xl opacity-20 hover:cursor-pointer hover:text-azure"
         ></i>
         <figure class="relative overflow-auto">
           <div class="shadow-bottom"></div>
