--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,10 @@
           ></i>
         </div>
       </div>
-      <div id="hero-lg" class="hero relative hidden lg:inline">
+      <div
+        id="hero-lg"
+        class="hero relative mb-10 hidden max-h-max lg:inline-block"
+      >
         <!-- <div class="absolute bottom-6 z-10 px-12 hover:cursor-pointer">
           <h1 class="font-sans text-4xl font-black hover:text-azure/[0.9]">
             Wonka
@@ -111,16 +114,18 @@
           <div class="shadow-bottom"></div>
           <img
             class="min-w-p[779px] min-h-[435px] w-full min-w-[779px] rounded-lg"
-            src=""
-            alt=""
           />
         </figure>
       </div>
       <section
         id="previewCards-container"
-        class="cards mt-10 flex flex-col justify-center transition-opacity"
+        class="cards mt-10 flex flex-col justify-center transition-opacity lg:mt-0"
       >
-        <h1 class="my-4 text-base font-black lg:hidden">Trending Movies</h1>
+        <h1
+          class="my-4 text-base font-black lg:mb-4 lg:mt-0 lg:hidden lg:text-2xl lg:text-secondary-color-t"
+        >
+          Trending Movies
+        </h1>
         <article
           id="trendMovies"
           class="grid grid-cols-2 justify-items-center gap-4 lg:grid-cols-4 lg:gap-8 xl:grid-cols-5"
@@ -178,30 +183,13 @@
         </button> -->
       </section>
 
-      <aside class="aside hidden bg-secondary-color-b pl-6 lg:inline">
+      <aside class="aside hidden bg-secondary-color-b py-2 pl-6 lg:inline">
         <h2>Genres</h2>
         <ul class="mt-3 space-y-2 text-sm font-normal text-primary-color-t">
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Action
-          </li>
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Animation
-          </li>
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Anime
-          </li>
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Adventure
-          </li>
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Drama
-          </li>
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Science-fiction
-          </li>
-          <li class="fancy-link w-fit cursor-pointer">
-            <i class="fa-solid fa-tag mr-1"></i>Comedy
-          </li>
+          <!-- <li class="fancy-link w-fit cursor-pointer">
+            <i class="fa-solid fa-tag mr-1"></i>
+            <a href="#category=Action"> Action </a>
+          </li> -->
         </ul>
       </aside>
     </main>
