--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
         </h1>
         <article
           id="trendMovies"
-          class="grid grid-cols-2 justify-items-center gap-4 lg:grid-cols-4 lg:gap-8 xl:grid-cols-5"
+          class="grid grid-cols-2 justify-items-center gap-4 scroll-smooth lg:grid-cols-4 lg:gap-8 xl:grid-cols-5"
         >
           <!-- <figure class="relative z-auto w-full max-w-xs cursor-pointer">
             <div
