build: added webpack and configurations to optimize files for production

--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,14 @@
       src="https://kit.fontawesome.com/e8d0a79e93.js"
       crossorigin="anonymous"
     ></script>
-    <script type="importmap">
+    <!-- <script type="importmap">
       {
         "imports": {
           "axios": "../node_modules/axios/dist/esm/axios.min.js"
         }
       }
-    </script>
-    <script defer type="module" src="../src/utilities/navigation.js"></script>
-    <script defer type="module" src="../src/main.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700;900&family=Roboto:wght@400;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/app.css" />
-    <link rel="icon" href="./assets/ALMOVIE-logo.png" />
+    </script> -->
+    <link rel="icon" href="assets/images/ALMOVIE-logo.png" />
   </head>
 
   <body class="overflow-x-clip bg-primary-color-b">
@@ -37,7 +28,7 @@
         <a href="#home" class="lg:z-10"
           ><img
             width="110"
-            src="./assets/ALMOVIE-logo.png"
+            src="assets/images/ALMOVIE-logo.png"
             alt="ALMOVIE logo"
             draggable="false"
         /></a>
@@ -263,7 +254,11 @@
         </p>
         <p>API from</p>
         <a href="https://www.themoviedb.org/" target="_blank">
-          <img width="50px" src="./assets/LICENSE.svg" alt="TheMovieDB Logo" />
+          <img
+            width="50px"
+            src="assets/images/LICENSE.svg"
+            alt="TheMovieDB Logo"
+          />
         </a>
       </div>
     </footer>
